// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CounterLabel renders with secondary scheme when no "scheme" prop is provided 1`] = `
<div>
  <span
    aria-hidden="true"
    class="CounterLabel"
    data-scheme="secondary"
  >
    1234
  </span>
  <span
    class="VisuallyHidden"
  >
     (
    1234
    )
  </span>
</div>
`;

exports[`CounterLabel respects the primary "scheme" prop 1`] = `
<div>
  <span
    aria-hidden="true"
    class="CounterLabel"
    data-scheme="primary"
  >
    1234
  </span>
  <span
    class="VisuallyHidden"
  >
     (
    1234
    )
  </span>
</div>
`;
